Bug 159498 - Items in Template Manager's "Manage" dropdown should be left-aligned (gtk3)
Summary: Items in Template Manager's "Manage" dropdown should be left-aligned (gtk3)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.4.4.2 release
Hardware: x86-64 (AMD64) Linux (All)
: low trivial
Assignee: Caolán McNamara
URL:
Whiteboard: target:24.8.0 target:24.2.3 target:7.6.7
Keywords: bibisected, bisected
Depends on:
Blocks: Template-Manager GTK3
  Show dependency treegraph
 
Reported: 2024-02-01 09:09 UTC by stragu
Modified: 2024-04-15 08:23 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (93.65 KB, image/png)
2024-02-01 09:09 UTC, stragu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description stragu 2024-02-01 09:09:23 UTC
Created attachment 192318 [details]
screenshot

Cosmetic, but I find it grating :)

Steps:
1. In any component, or Start Center: File > Templates > Manage templates
2. Open the "Manage" dropdown

Result: centred items.
Expected: left-aligned items (or right-aligned in RTL UI)

Started in 7.4 when the items gained icons, still repro in:

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 3be785e088cc0aa726509cf6b52b1d3b03817172
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

No repro with kf5 and gen VCL plugins.

Bibisected with linux-64-7.4 to first bad build [dff90f37ce434fb259d4eab227f33abd8466eb0d] which points to double cherrypick:

commit b10615a204469846508ad94c5858d5434260664a
author	Caolán McNamara   Wed Nov 09 21:30:34 2022 +0000
committer	Adolfo Jayme Barrientos 	Mon Nov 14 06:34:53 2022 +0100
tdf#151898 if svgs are used in hidpi get a high quality GtkImage
Related: tdf#151898 use more of the code path that can use scaled svgs
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142597

Caolán, can you please have a look?
Comment 1 Commit Notification 2024-03-30 14:09:52 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c465642781485cda41bf4bd4fd3e0c0b1c7e53da

Resolves: tdf#159498 Items in Template Manager dropdown should be left-aligned

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Caolán McNamara 2024-03-30 14:10:53 UTC
done in trunk now, backport to 24-2 in gerrit
Comment 3 Commit Notification 2024-03-30 15:18:12 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/b206e3b90a4ba34604a5e45faf3f05639ee89752

Resolves: tdf#159498 Items in Template Manager dropdown should be left-aligned

It will be available in 24.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-04-02 01:37:37 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/54ad1c908123075dfdce067329b8b6a5731f96d4

Resolves: tdf#159498 Items in Template Manager dropdown should be left-aligned

It will be available in 7.6.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 stragu 2024-04-15 08:23:12 UTC
Verified in:

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 8b599d60fef80039cdfe636a771c3fc8eb1028c3
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded

Thanks Caolán!