Resolves: tdf#159498 Items in Template Manager dropdown should be left-aligned

Change-Id: I72d32793814b28b7452be701f0732dbd9dbbcb37
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/165483
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>